fix : x overflow after modal closed

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,11 @@ body {
 	display: flex;
 	flex-direction: column;
 	overflow-x: hidden;
+	width: 100%;
+}
+
+body.modal-open {
+	overflow: hidden;
 }
 
 /* Scrollbar personnalisée */
@@ -246,6 +251,8 @@ body {
 	z-index: 1000;
 	justify-content: center;
 	align-items: center;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .modal-content {
@@ -257,6 +264,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+	margin: 2rem auto;
 }
 
 .modal-header {
